# machine-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
cleaned_data/: merged_m.csv
cleaned_data/ais/: ais_train_m.csv  schedules_to_may_2024_m.csv
cleaned_data/ports/: ports_m.csv
cleaned_data/vessels/: vessels_m.csv
docs/: Dataset definitions and explanation.md  Machine learning task.md  kaggle_metric.ipynb  loading_maps.ipynb
output/: submission_m_0.csv  submission_m_1.csv
src/jacob/: PreProcessingAndFeatureEngineering.ipynb  addTemporal.ipynb  big.py  shortNotebook (3).ipynb  shortNotebook.ipynb  shortNotebookFinal.ipynb  shortNotebookRF.ipynb
src/jacob/.ipynb_checkpoints/: PreProcessingAndFeatureEngineering-checkpoint.ipynb
src/michael/: clean_data.py  create_model.py  merge_data.py  simple.py  test_model.py
src/michael/old/: create_model.py
submissions/: subfinal.csv  submission.csv  temporal-20estimators-14lags.csv
