[project]
name = "machine-learning"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
exclude = [
  ".git",
  ".ipynb_checkpoints",
  ".pyenv",
  ".ruff_cache",
  ".venv",
  ".vscode",
  '.python-version',
  "docs",
  "PreProcessingAndFeatureEngineering.ipynb",
]

[tool.ruff.format]
quote-style = "single"
